 * Feature: Add -U/--uncensor parameter to drawpile-timelapse to allow revealing censored layers.
 * Fix: Reduce contrast on censor tile stripes to make them less annoying to look at.
 * Server Feature: When you pass an option that's not compiled in, the error message will not inform you of that fact, rather than just saying you passed an unknown option with no further information.

2024-02-25 Version 2.2.2-beta.1
 * Server Feature: Allow adding a message when kicking someone through the admin API.
 * Fix: Don't mess up strokes when hitting undo while still actively drawing them. Thanks Sinamer for reporting.
 * Fix: Properly reset angle when undoing a point with the curve tool.
 * Server Feature: Log more a more detailed reason when a client is disconnected, since something like a login error can have many causes.
 * Feature: Indicate the difference between self-signed and "real" server certificates.
 * Fix: Rename "trusted hosts" to "pinned certificates", because that's what they are.
 * Fix: Make floating docks stay on top of the main window on macOS. Thanks 6ix for reporting and testing.
 * Feature: Add a dual color button, showing the foreground and background color, with the ability to set, swap and reset them.
 * Feature: Add "merged without background" as a source for the flood fill tool.
 * Server Fix: Include allow web flag when listing a session.
 * Server Fix: Update active drawing users when refreshing a session listing.
 * Fix: Make WebSockets compile under Qt < 6.5. Thanks kiroma for reporting.
 * Server Fix: Properly start extbans checks when running via systemd. Thanks Bluestrings for reporting.
 * Server Feature: Warn if a command-line argument was ignored due to systemd sockets being used instead.
 * Fix: Show web join allowance checkbox in session settings properly, it didn't show up if disabled before.
 * Server Feature: Allow making joining via the browser dependent on if the session has a password or not.

2024-02-18 Version 2.2.1